<resources>
    <string name="app_name">Spécialités Argenteuil</string>
    <string name="add_operation_intervention_nb_hint">Numéro d\'intervention</string>
    <string name="add_operation_motif_hint">Motif</string>
    <string name="add_operation_address_hint">Adresse</string>
    <string name="personnel_title">Personnel</string>
    <string name="observations_title">Observations</string>
    <string name="equipment_title">Matériel</string>
    <string name="chiens_title">Chiens</string>
    <string name="action_title">Actions</string>
    <string name="engins_title">Engins</string>
    <string name="animal_title">Animal</string>
    <string name="espece_subtitle">Espèce</string>
    <string name="type_subtitle">Type</string>
    <string name="prise_charge_subtitle">Prise en charge</string>
    <string name="destination_subtitle">Destination</string>
    <string name="engins_subtitle">Engins sur les lieux</string>
    <string name="spe_subtitle">Spécialités sur les lieux</string>
    <string name="transport_subtitle">Transport</string>
    <string name="decision_subtitle">Décision</string>
    <string name="cyno_priaxe_display">Pri-Axe</string>
    <string name="add_operation_nb_helper">Nom des agents présents</string>
    <string name="add_operation_label_with">Avec</string>
    <string name="add_operation_chip_team_text">%01$s %02$s</string>
    <string name="add_operation_chip_team_text_with_time">%01$s - %02$d:%03$d</string>
    <string name="add_operation_time_helper">hh:mm</string>
    <string name="add_operation_error_mandatory_field">Ce champ est obligatoire</string>
    <string name="add_operation_error_time_required">Une durée de travail est nécessaire pour l\'un des agents. Veuiller en spécifier une en cliquant sur le nom de l\'agent</string>
    <string name="add_operation_operation_added">L\'opération a été sauvegardée</string>
    <string name="add_operation_exception_generic">L\'opération a échouée</string>
    <string name="add_operation_exception">L\'opération a échouée : %01$s</string>
    <string name="add_operation_rearmament_hint">Réarmement</string>
    <string name="add_operation_boites">Boites</string>
    <string name="add_operation_liter">Litres</string>
    <string name="add_operation_popup_agent_title">Agent déjà présent</string>
    <string name="add_operation_popup_agent_message">L\'agent sélectionné a déjà été ajouté à l\'opération</string>
    <string name="add_operation_take_picture">Prendre une photo</string>
    <string name="add_operation_select_picture">Sélectionner une photo</string>
    <string name="add_agent_firstname">Prénom</string>
    <string name="add_agent_lastname">Nom</string>
    <string name="add_agent_agent_added">L\'agent a été sauvegardé</string>
    <string name="add_agent_agent_edited">L\'agent a été modifié</string>
    <string name="add_agent_agent_deleted">L\'agent a été supprimé</string>
    <string name="add_agent_error">Impossible d\'ajouter l\'agent : %01$s</string>
    <string name="add_agent_specialty_error">Veuillez sélectionner au moins une spécialité</string>
    <string name="delete_agent_title">Supprimer un agent</string>
    <string name="delete_agent_description">Etes-vous sûr de vouloir supprimer %01$s ?</string>
    <string name="authentication_email">Email</string>
    <string name="authentication_password">Mot de passe</string>
    <string name="authentication_login">Se connecter</string>
    <string name="authentication_subtitle">La gestion des spécialités des sapeurs-pompiers de la caserne d\'Argenteuil (95)</string>
    <string name="authentication_title">Bienvenue sur Spécialités Argenteuil</string>
    <string name="authentication_version">v.</string>
    <string name="menu_version">v.%01$s</string>
    <string name="equipment_sauvetage_title">Sauvetage</string>
    <string name="equipment_sauvetage_lspcc">LSPCC / Main courante</string>
    <string name="equipment_sauvetage_echelle_coulisse">Echelle à coulisse</string>
    <string name="equipment_sauvetage_telestep">Telestep</string>
    <string name="equipment_sauvetage_kit_tyrolienne">Kit Tyrolienne</string>
    <string name="equipment_sauvetage_kit_telepherique">Kit Téléphérique</string>
    <string name="equipment_eclairage_title">Eclairage</string>
    <string name="equipment_eclairage_groupe_electro">Groupe électrogène</string>
    <string name="equipment_eclairage_eclairage">Eclairage</string>
    <string name="equipment_percement_title">Percement</string>
    <string name="equipment_percement_groupe_hydraulique">Groupe hydraulique</string>
    <string name="equipment_percement_tronconneuse_disque">Tronçonneuse à disque</string>
    <string name="equipment_percement_tronconneuse_chaine">Tronçonneuse à chaine</string>
    <string name="equipment_percement_chaine_diamant">Chaine diamant</string>
    <string name="equipment_percement_chaine_carbure">Chaine carbure</string>
    <string name="equipment_percement_perforateur">Perforateur</string>
    <string name="equipment_percement_oxydecoupeur">Oxydécoupeur</string>
    <string name="equipment_force_title">Force</string>
    <string name="equipment_force_tirfor">Tirfor</string>
    <string name="equipment_force_sangle_textile">Sangle textile</string>
    <string name="equipment_force_coussin_levage">Coussin levage</string>
    <string name="equipment_etaiement_title">Etaiement</string>
    <string name="equipment_etaiement_etai_pneumatique">Etai pneumatique</string>
    <string name="equipment_etaiement_etai_metallique_petit">Etai métallique Petit</string>
    <string name="equipment_etaiement_etai_metallique_moyen">Etai métallique Moyen</string>
    <string name="equipment_etaiement_etai_metallique_grand">Etai métallique Grand</string>
    <string name="equipment_etaiement_gousset">Gousset</string>
    <string name="equipment_etaiement_volige">Volige</string>
    <string name="equipment_etaiement_chevron">Chevron</string>
    <string name="equipment_etaiement_bastaing">Bastaing</string>
    <string name="equipment_exploration_title">Exploration</string>
    <string name="equipment_exploration_asb6">ASB6</string>
    <string name="equipment_exploration_asb8">ASB8</string>
    <string name="equipment_exploration_asb9">ASB9</string>
    <string name="equipment_exploration_camera">Caméra</string>
    <string name="equipment_petit_materiel_title">Petit matériel</string>
    <string name="equipment_petit_materiel_visseuse">Visseuse</string>
    <string name="equipment_petit_materiel_vis">Vis</string>
    <string name="equipment_petit_materiel_cordage">Cordage</string>
    <string name="equipment_petit_materiel_servante">Servante</string>
    <string name="equipment_petit_materiel_carburant_sp95">Carburant SP95</string>
    <string name="equipment_petit_materiel_carburant_marline">Carburant Marline</string>
    <string name="equipment_petit_materiel_carburant_melange">Carburant Mélange 4%</string>
    <string name="equipment_petit_materiel_carburant_huile_chaine">Huile de chaine</string>
    <string name="engins_sd_vlrsd">Vlr SD</string>
    <string name="engins_sd_cesd">Ce SD</string>
    <string name="engins_sd_vtusd_arg">VTU SD ARG</string>
    <string name="engins_sd_vtusd_cep">VTU SD CEP</string>
    <string name="engins_sd_vtusd_bez">VTU SD BEZ</string>
    <string name="engins_sd_vtusd_gra">VTU SD GRA</string>
    <string name="engins_sd_vidspe">Vid Spe</string>
    <string name="animal_espece_dog">Chien</string>
    <string name="animal_espece_cat">Chat</string>
    <string name="animal_espece_other">Autre</string>
    <string name="animal_type_domestique">Domestique</string>
    <string name="animal_type_sauvage">Sauvage</string>
    <string name="animal_type_elevage">Elevage</string>
    <string name="animal_type_autochtone">Autochtone</string>
    <string name="animal_prise_charge_cooperatif">Coopératif</string>
    <string name="animal_prise_charge_menacant">Menaçant</string>
    <string name="animal_prise_charge_blesse">Blessé</string>
    <string name="animal_prise_charge_mordeur">Mordeur</string>
    <string name="animal_prise_charge_mort">Mort</string>
    <string name="animal_prise_charge_anesthesie">Anesthesié</string>
    <string name="animal_destination_centre_regroupement">Centre de regroupement</string>
    <string name="animal_destination_cedaf">CEDAF</string>
    <string name="animal_destination_proprietaire">Proprietaire</string>
    <string name="animal_destination_clinique">Clinique vétérinaire de l\'isle Adam</string>
    <string name="animal_destination_a_pris_la_fuite">A pris la fuite</string>
    <string name="animal_destination_other">Autre</string>
    <string name="animal_transport_vira">Vira</string>
    <string name="animal_transport_vtu">Vtu</string>
    <string name="animal_engin_fpt">Fpt</string>
    <string name="animal_engin_vsr">Vsr</string>
    <string name="animal_engin_moyen_aerien">Moyen aérien</string>
    <string name="animal_engin_vsav">Vsav</string>
    <string name="animal_engin_vsso">Vsso</string>
    <string name="animal_specialite_grimp">Grimp</string>
    <string name="animal_specialite_sd">Sd</string>
    <string name="animal_specialite_nautique">Nautique</string>
    <string name="animal_specialite_gred">Gred</string>
    <string name="animal_transport_other">Autre</string>
    <string name="action_approche_title">Approche</string>
    <string name="action_identification_title">Identification</string>
    <string name="action_neutralisation_title">Neutralisation</string>
    <string name="action_capture_title">Capture</string>
    <string name="action_relevage_title">Relevage</string>
    <string name="action_assistance_title">Assistance</string>
    <string name="action_condition_title">Conditionnement d\'un animal</string>
    <string name="action_transport_title">Transport</string>
    <string name="decision_declenchement_sdis">Déclenchement SDIS :</string>
    <string name="decision_cyno_declenchement_sdis">Déclenchement SDIS</string>
    <string name="decision_cyno_declenchement_police">Déclenchement Police</string>
    <string name="decision_prise_en_charge_mairie">Prise en charge Mairie</string>
    <string name="decision_prise_en_charge_police">Prise en charge Police</string>
    <string name="decision_autre">Autre :</string>
    <string name="space">&#160;</string>
    <string name="agents_chip_filter_cyno">Cyno</string>
    <string name="agents_chip_filter_sd">USAR</string>
    <string name="agents_chip_filter_ra">RAN</string>
    <string name="spe_operation_personnel_title">Personnel</string>
    <string name="spe_operation_personnel_unit_chief_title">Chef d\'unité</string>
    <string name="spe_operation_personnel_subtitle">Personnel engagé</string>
    <string name="spe_operation_photo_title">Photo</string>
    <string name="menu_specialite_title">Spécialités</string>
    <string name="menu_specialite_cyno_title">Cynotechnique</string>
    <string name="menu_specialite_sd_title">Sauvetage-déblaiement</string>
    <string name="menu_specialite_ra_title">Risque animalier</string>
    <string name="menu_agents_title">Agents</string>
    <string name="menu_settings_title">Paramètres</string>
    <string name="menu_csp_name_title">CSP Argenteuil</string>
    <string name="menu_stats_title">Statistiques</string>
    <string name="menu_map_title">Carte</string>
    <string name="stock_title">Gestion du stock</string>
    <string name="precisions">Précisions</string>
    <string name="screen_title_operations_list">Liste d\'opérations</string>
    <string name="screen_title_operation_detail">Détail de l\'opération</string>
    <string name="screen_title_agents_list">Liste des agents</string>
    <string name="screen_title_agent_detail">Détail de l\'agent</string>
    <string name="screen_title_add_agent">Ajouter un agent</string>
    <string name="screen_title_add_operation">Ajouter une %01$s</string>
    <string name="screen_title_statistiques">Statistiques</string>
</resources>