<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/addOperationFragment">

    <fragment
        android:id="@+id/agentFragment"
        android:name="com.pomplarg.spe95.agent.ui.AgentFragment"
        android:label="@string/screen_title_agents_list"
        tools:layout="@layout/fragment_agents">
        <action
            android:id="@+id/action_agentFragment_to_agentDetailsFragment"
            app:destination="@id/agentDetailsFragment" />

        <action
            android:id="@+id/action_agentFragment_to_addOperationFragment"
            app:destination="@id/addAgentFragment"
            app:enterAnim="@android:anim/fade_in" />

    </fragment>

    <fragment
        android:id="@+id/addAgentFragment"
        android:name="com.pomplarg.spe95.agent.ui.AddAgentFragment"
        android:label="@string/screen_title_add_agent">

        <action
            android:id="@+id/action_addAgentFragment_to_agentFragment"
            app:destination="@id/agentFragment"
            app:enterAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/agentDetailsFragment"
        android:name="com.pomplarg.spe95.agent.ui.AgentDetailsFragment"
        android:label="@string/screen_title_agent_detail">

        <argument
            android:name="agentId"
            android:defaultValue=""
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/speOperationFragment"
        android:name="com.pomplarg.spe95.speoperations.ui.SpeOperationFragment"
        android:label="@string/screen_title_operations_list">
        <action
            android:id="@+id/action_speOperationFragment_to_speOperationDetailsFragment"
            app:destination="@id/speOperationDetailsDetailsFragment" />

        <action
            android:id="@+id/action_speOperationFragment_to_addOperationFragment"
            app:destination="@id/addOperationFragment"
            app:enterAnim="@android:anim/fade_in" />

        <argument
            android:name="specialty"
            android:defaultValue="cyno"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/speOperationDetailsDetailsFragment"
        android:name="com.pomplarg.spe95.speoperations.ui.SpeOperationDetailsFragment"
        android:label="@string/screen_title_operation_detail">

        <action
            android:id="@+id/action_agentFragment_to_agentDetailsFragment"
            app:destination="@id/agentDetailsFragment" />

        <argument
            android:name="specialtyDetails"
            android:defaultValue="cyno"
            app:argType="string" />

        <argument
            android:name="speOperationId"
            android:defaultValue="-1"
            app:argType="integer" />

    </fragment>
    <fragment
        android:id="@+id/addOperationFragment"
        android:name="com.pomplarg.spe95.speoperations.ui.AddOperationFragment"
        android:label="@string/screen_title_add_operation">

        <argument
            android:name="specialty"
            android:defaultValue="cyno"
            app:argType="string" />

        <argument
            android:name="type"
            android:defaultValue="Intervention"
            app:argType="string" />
        <action
            android:id="@+id/action_addOperationFragment_to_speOperationFragment"
            app:destination="@id/speOperationFragment"
            app:enterAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/statistiquesFragment"
        android:name="com.pomplarg.spe95.statistiques.ui.StatistiquesFragment"
        android:label="@string/screen_title_statistiques">

        <argument
            android:name="specialty"
            android:defaultValue="cyno"
            app:argType="string" />

    </fragment>

</navigation>