<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.pomplarg.spe95.utils.Constants" />

        <import type="android.view.View" />

        <variable
            name="vmSpeOperation"
            type="com.pomplarg.spe95.speoperations.ui.SpeOperationViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_equipment_category_title"
            style="@style/CategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_4dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:text="@string/action_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_add_equipment_ra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            app:cardCornerRadius="@dimen/dimen_4dp"
            app:cardElevation="@dimen/dimen_2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp">

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="approche, identification" />

                <CheckBox
                    android:id="@+id/approche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionApproche}"
                    android:text="@string/action_approche_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/identification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionIdentification}"
                    android:text="@string/action_identification_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/approche" />

                <CheckBox
                    android:id="@+id/neutralisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionNeutralisation}"
                    android:text="@string/action_neutralisation_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/identification" />

                <CheckBox
                    android:id="@+id/capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionCapture}"
                    android:text="@string/action_capture_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neutralisation" />

                <CheckBox
                    android:id="@+id/relevage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionRelevage}"
                    android:text="@string/action_relevage_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/capture" />

                <CheckBox
                    android:id="@+id/assistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionAssistance}"
                    android:text="@string/action_assistance_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/relevage" />

                <CheckBox
                    android:id="@+id/conditionnement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionConditionnement}"
                    android:text="@string/action_condition_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/assistance" />

                <CheckBox
                    android:id="@+id/transport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="@={vmSpeOperation._actionTransport}"
                    android:text="@string/action_transport_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conditionnement" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>